Fix pagination button on appbar overlap bug

--- a/src/common/pages/_market.scss
+++ b/src/common/pages/_market.scss
@@ -2,3 +2,7 @@
     width: 100%;
     height: 300px;
 }
+
+.active {
+    z-index: 1;
+}
